dkosv3/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: fastapi-assignments
  name: fastapi-assignments
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi-assignments
  template:
    metadata:
      labels:
        app: fastapi-assignments
    spec:
      containers:
        - name: fastapi-assignments
          image: idock.daumkakao.io/ethan.1q/fastapi-assignments-app:latest
          imagePullPolicy: Always
          resources:
              limits:
                  cpu: 500m
                  memory: 250Mi
              requests:
                  cpu: 500m
                  memory: 250Mi
