dkosv3/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fastapi-assignments
  name: fastapi-assignments
spec:
  type: ClusterIP
  selector:
    app: fastapi-assignments
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
